@@ -9,5 +9,7 @@
 
 #define INITGUID
 #include <basetyps.h>
+// StdHlink CLSID
 DEFINE_GUID(CLSID_StdHlink,0x79eac9d0,0xbaf9,0x11ce,0x8c,0x82,0,0xaa,0,0x4b,0xa9,0xb);
+// StdHlinkBrowseContext CLSID
 DEFINE_GUID(CLSID_StdHlinkBrowseContext,0x79eac9d1,0xbaf9,0x11ce,0x8c,0x82,0,0xaa,0,0x4b,0xa9,0xb);
